--- a/kollazs.html
+++ b/kollazs.html
@@ -1,4 +1,3 @@
- 
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,6 +5,16 @@
 <title>Gawlovics Ákos oldala</title>
 </head>
 <body style="background-color: gray;" >
+
+     <nav>
+          <a href="https://gawakos.github.io/Kollazs/kollazs.html">HOME</a>
+<a href="https://gawakos.github.io/Kollazs/keplink.html">1.feladat</a>
+<a href="https://gawakos.github.io/Kollazs/listak.html">2.feladat</a>
+<a href="https://gawakos.github.io/Kollazs/orarend.html">3.feladat</a>
+<a href="https://gawakos.github.io/Kollazs/gyakorlas.html">4.feladat</a>
+
+
+     </nav>
     
 
 <h1 style="color: chartreuse;" >Gawlovics Ákos</h1>
