--- a/kollazs.html
+++ b/kollazs.html
@@ -1,17 +1,25 @@
+ 
 <!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <title>Gawlovics Ákos oldala</title>
+
+<style>
+     a{
+          text-decoration:none
+     }
+</style>
+
 </head>
 <body style="background-color: gray;" >
 
      <nav>
-          <a href="https://gawakos.github.io/Kollazs/kollazs.html">HOME</a>
-<a href="https://gawakos.github.io/Kollazs/keplink.html">1.feladat</a>
-<a href="https://gawakos.github.io/Kollazs/listak.html">2.feladat</a>
-<a href="https://gawakos.github.io/Kollazs/orarend.html">3.feladat</a>
-<a href="https://gawakos.github.io/Kollazs/gyakorlas.html">4.feladat</a>
+          <a href="https://gawakos.github.io/Kollazs/kollazs.html" style="background-color: aqua;">HOME</a>
+<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat</a>
+<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat</a>
+<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat</a>
+<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat</a>
 
 
      </nav>
@@ -24,10 +32,7 @@
 <h5 style="color: deeppink;" >Gawlovics Ákos</h5>
 <h6 style="color: gold;" >Gawlovics Ákos</h6>
     
-   <p>  1. feladat: <a href="https://gawakos.github.io/Kollazs/keplink.html" target="blank">KÉPLINK</a> </p>
-    <p>  2. feladat: <a href="https://gawakos.github.io/Kollazs/listak.html" target="blank">LISTA</a></p>
-    <p>  3. feladat: <a href="https://gawakos.github.io/Kollazs/orarend.html" target="blank">Órarend</a></p>
-     <p>  4. feladat: <a href="https://gawakos.github.io/Kollazs/gyakorlas.html" target="blank">Gyakorlás</a></p>
+  
 
  
 <p>Ez lenne a kollázs.</p>
