--- a/gyakorlas.html
+++ b/gyakorlas.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="hu">
 <head>
@@ -19,10 +17,20 @@ p {text-align: center;
 color: chartreuse;
 background-color: darkorange;}
 
+a{text-decoration:none}
     </style>
 
 </head>
 <body style="background-color: gainsboro;">
+    <nav>
+        <a href="https://gawakos.github.io/Kollazs/kollazs.html" style="background-color: aqua;">|HOME|</a>
+<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat|</a>
+<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat|</a>
+<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat|</a>
+<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat|</a>
+
+
+   </nav>
  <h1>Stílus formázás</h1>
  <h2>Ma megtanuljuk,hogyan kell stílust formázni head-ben.</h2> 
  <p>
