--- a/keplink.html
+++ b/keplink.html
@@ -1,10 +1,23 @@
- 
 <!DOCTYPE html>
 <html>
-<head>
+<head >
+    <style>
+        a{
+             text-decoration:none
+        }
+   </style>
 <title>KÉPLINK</title>
 </head>
 <body> 
+    <nav>
+        <a href="https://gawakos.github.io/Kollazs/kollazs.html" style="background-color: aqua;">|HOME|</a>
+<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat|</a>
+<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat|</a>
+<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat|</a>
+<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat|</a>
+
+
+   </nav>
 
 <h1>Gawlovics Ákos</h1>
 <p>Kép+link feladat</p>
