--- a/listak.html
+++ b/listak.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listák</title>
-    <style>body {background-color: black;} </style>
+    <style>
+    a{text-decoration:none}
+    body {background-color: black;} </style>
 </head>
 <body>
+    <nav>
+        <a href="https://gawakos.github.io/Kollazs/kollazs.html" style="background-color: aqua;">HOME</a>
+<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat</a>
+<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat</a>
+<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat</a>
+<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat</a>
+
+
+   </nav>
      
     <h1 style="color:coral">Gawlovics Ákos</h1>
     <h2 style="color: cyan;">Listák</h2>
