--- a/orarend.html
+++ b/orarend.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Órarend</title>
+    <style>
+        a{
+             text-decoration:none
+        }
+   </style>
 </head >
 <body style="background-color: rgba(98, 0, 255, 0.89);">
+
+    <nav>
+        <a href="https://gawakos.github.io/Kollazs/kollazs.html" style="background-color: aqua;">|HOME|</a>
+<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat|</a>
+<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat|</a>
+<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat|</a>
+<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat|</a>
+
+
+   </nav>
      
     <table style="margin: auto;"  border="1"width="40%">
          <tr>
