--- a/orarend.html
+++ b/orarend.html
@@ -13,11 +13,11 @@
 <body style="background-color: rgba(98, 0, 255, 0.89);">
 
     <nav>
-        <a href="https://gawakos.github.io/Kollazs/kollazs.html" style="background-color: aqua;">|HOME|</a>
-<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat|</a>
-<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat|</a>
-<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat|</a>
-<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat|</a>
+        <a href="https://gawakos.github.io/Kollazs/kollazs.html" style="background-color: aqua;">HOME</a>|
+<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat</a>|
+<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat</a>|
+<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat</a>|
+<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat</a>|
 
 
    </nav>
