--- a/listak.html
+++ b/listak.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a href="https://gawakos.github.io/Kollazs/index.html" style="background-color: aqua;>HOME</a>|
+        <a href="https://gawakos.github.io/Kollazs/index.html" style="background-color: aqua;">HOME</a>|
 <a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat</a>|
 <a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat</a>|
 <a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat</a>|
