--- a/keplink.html
+++ b/keplink.html
@@ -1,6 +1,9 @@
+
 <!DOCTYPE html>
 <html>
 <head >
+    <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/jpg" sizes="192x192" href="LOGO_GA.jpg">
     <style>
         a{
              text-decoration:none
@@ -9,15 +12,7 @@
 <title>KÉPLINK</title>
 </head>
 <body> 
-    <nav>
-        <a href="https://gawakos.github.io/Kollazs/index.html" style="background-color: aqua;">HOME</a>|
-<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat</a>|
-<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat</a>|
-<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat</a>|
-<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat</a>|
 
-
-   </nav>
 
 <h1>Gawlovics Ákos</h1>
 <p>Kép+link feladat</p>
