--- a/listak.html
+++ b/listak.html
@@ -1,23 +1,20 @@
+
+
 <!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listák</title>
+    <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/jpg" sizes="192x192" href="LOGO_GA.jpg">
     <style>
+        
     a{text-decoration:none}
     body {background-color: black;} </style>
 </head>
 <body>
-    <nav>
-        <a href="https://gawakos.github.io/Kollazs/index.html" style="background-color: aqua;">HOME</a>|
-<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat</a>|
-<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat</a>|
-<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat</a>|
-<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat</a>|
-
-
-   </nav>
+ 
      
     <h1 style="color:coral">Gawlovics Ákos</h1>
     <h2 style="color: cyan;">Listák</h2>
