--- a/orarend.html
+++ b/orarend.html
@@ -4,23 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Órarend</title>
+    <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/jpg" sizes="192x192" href="LOGO_GA.jpg">
     <style>
         a{
              text-decoration:none
         }
    </style>
 </head >
-<body style="background-color: rgba(98, 0, 255, 0.89);">
-
-    <nav>
-        <a href="https://gawakos.github.io/Kollazs/index.html" style="background-color: aqua;">HOME</a>|
-<a href="https://gawakos.github.io/Kollazs/keplink.html" style="background-color: aqua;">1.feladat</a>|
-<a href="https://gawakos.github.io/Kollazs/listak.html" style="background-color: aqua;">2.feladat</a>|
-<a href="https://gawakos.github.io/Kollazs/orarend.html" style="background-color: aqua;">3.feladat</a>|
-<a href="https://gawakos.github.io/Kollazs/gyakorlas.html" style="background-color: aqua;" >4.feladat</a>|
+<body style="background-color: rgb(98, 0, 255, 0.89);">
 
 
-   </nav>
      
     <table style="margin: auto;"  border="1"width="40%">
          <tr>
