--- a/orarend.html
+++ b/orarend.html
@@ -14,7 +14,13 @@
 </head >
 <body style="background-color: rgb(98, 0, 255, 0.89);">
 
-
+    <div class="sidebar">
+        <a href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
+        <a class="active" href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
+        <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
+        <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
+    </div>
+    <div class="content">
      
     <table style="margin: auto;"  border="1"width="40%">
          <tr>
@@ -112,3 +118,4 @@
 
     </tr>
     </table>
+    </div>
