--- a/keplink.html
+++ b/keplink.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head >
@@ -14,8 +13,8 @@
 <body> 
 
     <div class="sidebar">
-        <a href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
-        <a class="active" href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
+        <a class="active" href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
+        <a  href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
         <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
         <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
     </div>
