--- a/listak.html
+++ b/listak.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="hu">
 <head>
@@ -15,9 +14,9 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
-        <a class="active" href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
-        <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
+        <a  href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
+        <a  href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
+        <a class="active" href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
         <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
     </div>
     <div class="content">
