--- a/orarend.html
+++ b/orarend.html
@@ -15,7 +15,7 @@
 <body style="background-color: rgb(98, 0, 255, 0.89);">
 
     <div class="sidebar">
-        <a class="active" href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
+        <a  href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
         <a  href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
         <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
         <a class="active" href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
