--- a/gyakorlas.html
+++ b/gyakorlas.html
@@ -39,7 +39,10 @@ a{text-decoration:none}
     
  </p>
      <img width="100%" src="peter-bartels-elfenbeinturm.jpg" alt="">
-
+    
+<div class="footer">
+  <p>Copyright 🂱 SP © </p>
+</div>
  
 </body>
 </html>
