--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
      <img src=" https://gawakos.github.io/Kollazs/Collage.jpg" alt="kollázs" title="kollázs" width=500>
 
      </div>
+    
+    <div class="footer">
+  <p>Copyright 🂱 GA © </p>
+</div>
+    
 </body>
 </html>
