--- a/gyakorlas.html
+++ b/gyakorlas.html
@@ -41,7 +41,7 @@ a{text-decoration:none}
      <img width="100%" src="peter-bartels-elfenbeinturm.jpg" alt="">
     
 <div class="footer">
-  <p>Copyright 🂱 SP © </p>
+  <p>Copyright 🂱 GA © </p>
 </div>
  
 </body>
