--- a/keplink.html
+++ b/keplink.html
@@ -27,5 +27,8 @@
 alt="ez egy alma" title="alma" width=250>
 </a>
 </div>
+    <div class="footer">
+  <p>Copyright 🂱 GA © </p>
+</div>
 </body>
 </html>
