--- a/listak.html
+++ b/listak.html
@@ -38,6 +38,9 @@
   <li style="color: orange;">Alvás</li>
 
     </ul>
+        <div class="footer">
+  <p>Copyright 🂱 GA © </p>
+</div>
 
 </div>      
 </body>
