--- a/listak.html
+++ b/listak.html
@@ -32,6 +32,10 @@
     </ol>
 <p style="color: gold;">Kedvenc szabadidős tevékenységeim</p>
     <ul style="color: deeppink;">
+        
+        <div class="footer">
+  <p>Copyright 🂱 GA © </p>
+</div>
 
   <li style="color: khaki;">Gépezés</li>
   <li style="color: lime;">Úszás</li>
