--- a/listak.html
+++ b/listak.html
@@ -18,6 +18,8 @@
         <a  href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
         <a class="active" href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
         <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
+        <a href="https://gawakos.github.io/Kollazs/kosar.html/kosar.html">FELADAT 4</a>
+        <a href="https://gawakos.github.io/Kollazs/tablazat.html">FELADAT 5</a>
     </div>
     <div class="content">
  
