--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <a class="active" href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
         <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
         <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
+          <a href="https://gawakos.github.io/Kollazs/kosar.html/kosar.html">FELADAT 4</a>
+        <a href="https://gawakos.github.io/Kollazs/tablazat.html">FELADAT 5</a>
     </div>
     <div class="content">
     
