--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
           <a href="https://gawakos.github.io/Kollazs/kosar.html/kosar.html">FELADAT 4</a>
         <a href="https://gawakos.github.io/Kollazs/tablazat.html">FELADAT 5</a>
+         <a href="https://gawakos.github.io/Kollazs/jelszo.html">FELADAT 6</a>
     </div>
     <div class="content">
     
