--- a/jelszo.html
+++ b/jelszo.html
@@ -6,6 +6,17 @@
     <title>Rendelés</title>
 </head>
 <body>
+        <div class="sidebar">
+        <a  href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
+        <a class="active" href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
+        <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
+        <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
+          <a href="https://gawakos.github.io/Kollazs/kosar.html/kosar.html">FELADAT 4</a>
+        <a href="https://gawakos.github.io/Kollazs/tablazat.html">FELADAT 5</a>
+         <a href="https://gawakos.github.io/Kollazs/jelszo.html">FELADAT 6</a>
+    </div>
+    <div class="content">
+        
     <fieldset style="width: 50%;">
         <legend>Bejelentkezés</legend>
         <input type="text"  name="felhasználónév" id="user" placeholder="Ird be a neved...">
