--- a/kosar.html/kosar.html
+++ b/kosar.html/kosar.html
@@ -8,6 +8,17 @@
    <title>Kosár</title>
 </head>
 <body>
+     <div class="sidebar">
+        <a  href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
+         href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
+        <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
+        <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
+      <a class="active"    <a href="https://gawakos.github.io/Kollazs/kosar.html/kosar.html">FELADAT 4</a>
+        <a href="https://gawakos.github.io/Kollazs/tablazat.html">FELADAT 5</a>
+         <a href="https://gawakos.github.io/Kollazs/jelszo.html">FELADAT 6</a>
+    </div>
+    <div class="content">
+        
     <button onclick="kosarba('cipo1')"><img id="cipo1" src="Cipő.png" alt="Cipő1"> <br> Cipő 1. </button>
     <button onclick="kosarba('cipo2')"><img id="cipo2" src="Cipő2.png" alt="Cipő2"> <br> Cipő 2.</button>
     <button onclick="kosarba('cipo3')"><img id="cipo3" src="Cipő3.png" alt="Cipő3"> <br> Cipő 3.</button><br><br>
