--- a/keplink.html
+++ b/keplink.html
@@ -12,11 +12,14 @@
 </head>
 <body> 
 
-    <div class="sidebar">
-        <a class="active" href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
-        <a  href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
+     <div class="sidebar">
+       <a class="active"  <a  href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
+         href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
         <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
         <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
+        <a href="https://gawakos.github.io/Kollazs/kosar.html/kosar.html">FELADAT 4</a>
+        <a href="https://gawakos.github.io/Kollazs/tablazat.html">FELADAT 5</a>
+         <a href="https://gawakos.github.io/Kollazs/jelszo.html">FELADAT 6</a>
     </div>
     <div class="content">
 <h1>Gawlovics Ákos</h1>
