--- a/orarend.html
+++ b/orarend.html
@@ -14,11 +14,14 @@
 </head >
 <body style="background-color: rgb(98, 0, 255, 0.89);">
 
-    <div class="sidebar">
+      <div class="sidebar">
         <a  href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
-        <a  href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
+         href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
         <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
-        <a class="active" href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
+     <a class="active"   <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
+        <a href="https://gawakos.github.io/Kollazs/kosar.html/kosar.html">FELADAT 4</a>
+        <a href="https://gawakos.github.io/Kollazs/tablazat.html">FELADAT 5</a>
+         <a href="https://gawakos.github.io/Kollazs/jelszo.html">FELADAT 6</a>
     </div>
     <div class="content">
      
