--- a/tablazat.html
+++ b/tablazat.html
@@ -8,6 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+     <div class="sidebar">
+        <a  href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
+         href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
+        <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
+       <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
+        <a href="https://gawakos.github.io/Kollazs/kosar.html/kosar.html">FELADAT 4</a>
+       <a class="active"  <a href="https://gawakos.github.io/Kollazs/tablazat.html">FELADAT 5</a>
+         <a href="https://gawakos.github.io/Kollazs/jelszo.html">FELADAT 6</a>
+    </div>
+    <div class="content">
+        
     <table>
         <tr style="text-align: center;">
             <td>1 085 091 Ft</td>
