--- a/keplink.html
+++ b/keplink.html
@@ -14,7 +14,7 @@
 
      <div class="sidebar">
        <a class="active"  <a  href="https://gawakos.github.io/Kollazs/keplink.html">FŐOLDAL</a>
-         href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
+        <a href="https://gawakos.github.io/Kollazs/index.html">FELADAT 1</a>
         <a href="https://gawakos.github.io/Kollazs/listak.html">FELADAT 2</a>
         <a href="https://gawakos.github.io/Kollazs/orarend.html">FELADAT 3</a>
         <a href="https://gawakos.github.io/Kollazs/kosar.html/kosar.html">FELADAT 4</a>
